# fuse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  fuse-language-guide.md  test_interp2.fuse  test_interp3.fuse  test_interp4.fuse  test_interp5.fuse  test_minimal_interp.fuse  test_simple_interp.fuse  test_tiny.fuse  test_trace.fuse
.claude/: settings.local.json
docs/: fuse-implementation-plan-2.md  fuse-implementation-plan.md  fuse-repository-layout-2.md  fuse-repository-layout.md  guide-v2-plan.md  self_hosting.md
docs/adr/: ADR-001-ref-not-borrowed.md  ADR-002-mutref-not-inout.md  ADR-003-move-not-caret.md  ADR-004-rank-mandatory.md  ADR-005-deadlock-three-tiers.md  ADR-006-stage0-python.md  ADR-007-cranelift-not-llvm.md  ADR-008-no-timelines.md  ADR-009-data-contextual-keyword.md  ADR-010-asap-destruction-semantics.md  ADR-011-extern-fn-ffi.md
examples/: README.md  channels.fuse  error_handling.fuse  four_functions.fuse  hello.fuse  ownership_tour.fuse  shared_state.fuse
stage0/: README.md  requirements.txt
stage1/: Cargo.toml  README.md
stage1/fusec/: Cargo.toml
stage1/fusec/src/: error.rs  eval.rs  main.rs
stage1/fusec/src/ast/: mod.rs  nodes.rs
stage1/fusec/src/checker/: async_lint.rs  exhaustiveness.rs  mod.rs  ownership.rs  rank.rs  spawn.rs  types.rs
stage1/fusec/src/codegen/: cranelift.rs  layout.rs  mod.rs
stage1/fusec/src/hir/: lower.rs  mod.rs  nodes.rs
stage1/fusec/src/lexer/: lexer.rs  mod.rs  token.rs
stage1/fusec/src/parser/: mod.rs  parser.rs
stage1/fusec/tests/: run_tests.rs
stage2/: README.md
stdlib/: README.md
(+81 files in other folders)
