[package]
name = "fusec"
version = "0.1.0"
edition = "2021"
description = "The Fuse compiler — Stage 1"

[[bin]]
name = "fusec"
path = "src/main.rs"

[dependencies]
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"
fuse-runtime = { path = "../fuse-runtime" }
